2003-07-30  Dave Hyatt  <hyatt@apple.com>

	Add support for setting the text-shadow's color.  This uses a new CG API,
	so updating to a fairly recent Panther is required.
	
        Reviewed by rjw

        * khtml/css/cssparser.cpp:
        (CSSParser::parseShadow):
	* kwq/KWQPainter.mm:
        (QPainter::setShadow):

2003-07-30  John Sullivan  <sullivan@apple.com>

	- fixed 3346460 -- images > area (2048x2048) are compressed vertically 
	when displayed as src of img tag

        Reviewed by Darin

        * khtml/rendering/render_image.cpp:
        (RenderImage::layout):
	Just comment out the code that imposes a maximum image size (incorrectly);
	maybe KDE folks want to make this work, but we don't need to try to
	prevent large images.

2003-07-30  John Sullivan  <sullivan@apple.com>

	- WebCore part of fix for 3284525 -- AutoFill fills in 
	only e-mail address field of New Account form on Apple Store Japan

	There were two problems: the regex library being used by
	KWQRegExp.mm didn't handle unicode at all, and the way we
	were using word boundaries in our regular expressions didn't
	work with Japanese.

        Reviewed by Darin

        * kwq/KWQKHTMLPart.mm:
        (regExpForLabels):
	Redid the way word boundaries are used; the old way didn't
	work with PCRE, and also didn't work with Japanese. 

        * kwq/KWQRegExp.h:
	removed treatStartAsStartOfInput parameter to match() that Trey had added; 
	it was being used incorrectly and was not necessary.

        * kwq/KWQRegExp.mm:
        (compareStringOffsets), (createSortedOffsetsArray),
        (convertCharacterOffsetsToUTF8ByteOffsets),
        (convertUTF8ByteOffsetsToCharacterOffsets):
	Code copied from JavaScriptCore/regexp.cpp to convert between
	byte and character offsets. Darin preferred that I copy these
	methods rather than make them public in JavaScriptCore/regexp.h.
        (QRegExp::KWQRegExpPrivate::compile):
	converted from regex.h style to pcre.h style 